# meowc

./: .gitignore  Cargo.toml  Makefile.toml  rustfmt.toml
meowc-check/: Cargo.toml
meowc-check-core/: Cargo.toml
meowc-check-core/src/: check_sat.rs  lib.rs
meowc-check/src/: check_sat.rs  lib.rs  main.rs  parse.rs
meowc-sat/: Cargo.toml
meowc-sat/benches/: cnf_examples.rs
meowc-sat/src/: dimacs_cnf.pest  dimacs_cnf.rs  lib.rs  luby.rs  main.rs  solver.rs  stats.rs  types.rs
tools/: .clang-format  .gitignore  Makefile  check_sat.cpp  check_sat_fast.cpp  sat.hpp
