[package]
name = "meowc-sat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.4.0"
pest_derive = "2.4.0"

[dev-dependencies]
criterion = "0.4.0"
test-generator = "0.3.0"

[[bench]]
name = "cnf_examples"
harness = false
